# ono-csp

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  README.md  app.py  paper_summary.txt  pyproject.toml  requirements.txt  spec.md
data/molecules/: anthracene.xyz  hexacene.xyz  naphthalene.xyz  pentacene.xyz  tetracene.xyz
example/pentacene/: README.md  step1_init_params.csv  step1_vdw_curves.csv  step2_twist.csv  step2_twist_refined.csv  step3_twist.csv  transfer_integrals_alpha.csv
legacy/: README.md
legacy/ono_scripts/XRD_pattern/src/: powder pattern model.ipynb
legacy/ono_scripts/result_csv/step1/pentacene/: step1.csv
legacy/ono_scripts/result_csv/step2_twist/anthracene/: step2_twist_0.csv  step2_twist_1.csv
legacy/ono_scripts/result_csv/step3_twist/anthracene/: step3_twist.csv
legacy/ono_scripts/stepwise_optimization/: make_step1.py  make_step2_para.py  make_step2_twist.py  make_step3_para.py  make_step3_twist.py  readme.txt  step1.py  step2_para.py  step2_twist.py  step3_para.py  step3_para_vdw.py  step3_twist.py
legacy/ono_scripts/tcal_csv/: readme.txt  tcal_csv.py
legacy/ono_scripts/tot_energy/: tot_energy.py
src/csp/: __init__.py  utils.py
src/csp/dft/: job_cluster.py  make_gjf.py  parse_log.py
src/csp/plot/: map2d.py  step1_results.py  step2_results.py  vdw_scan.py  viewer3d.py
src/csp/structure/: intralayer.py  molecule.py
src/csp/vdw/: contact.py  extract_init.py  interlayer.py  sweep.py
