[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csp"
version = "0.1.0"
description = "Crystal structure prediction for layered herringbone polyacene packings (Ono et al., JACS submitted)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["crystal-structure-prediction", "polyacene", "organic-semiconductor", "dft", "herringbone"]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]
viz = [
  "streamlit>=1.35",
  "plotly>=5.0",
  "py3Dmol>=2.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
